--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -73,7 +73,7 @@
     right: 0;
     z-index: 1;
 }
-@media screen and (max-width: 1170) {
+@media screen and (max-width: 1170px) {
     #home {
         min-height: 100%;
         padding-top: 0px;
@@ -92,7 +92,8 @@
     }
 }
 
-@media screen and (max-width: 450) {
+@media screen and (max-width: 450px) {
+ 
     #phone_button button {
         display: none;
     }
